Bug 311551 - [JJ] Snap helper window effect doesn't repaint background when resizing the window
Summary: [JJ] Snap helper window effect doesn't repaint background when resizing the w...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.9.90 (Beta 2)
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 4.10
Assignee: KWin default assignee
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-12-12 03:48 UTC by Michael Daffin
Modified: 2013-01-07 14:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments
Demo of the effect (817.10 KB, image/png)
2012-12-12 04:31 UTC, Michael Daffin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Daffin 2012-12-12 03:48:38 UTC
This leads to a visual glitch as the centre box size changes, but only the part that cover the window gets properly updated leading to a broken box. See the attached screen shot to see an example.
Comment 1 Michael Daffin 2012-12-12 04:31:16 UTC
Created attachment 75793 [details]
Demo of the effect
Comment 2 Thomas Lübking 2012-12-29 15:37:04 UTC
http://git.reviewboard.kde.org/r/108005/
Comment 3 Thomas Lübking 2013-01-02 18:00:16 UTC
Git commit 16c69a13f8c35a67ae5c8907f2f377fa72297bec by Thomas Lübking.
Committed on 29/12/2012 at 16:27.
Pushed by luebking into branch 'KDE/4.10'.

snaphelper: repaint center rect on resizing client
FIXED-IN: 4.10
REVIEW: 108005

M  +14   -2    kwin/effects/snaphelper/snaphelper.cpp
M  +1    -0    kwin/effects/snaphelper/snaphelper.h

http://commits.kde.org/kde-workspace/16c69a13f8c35a67ae5c8907f2f377fa72297bec
Comment 4 Thomas Lübking 2013-01-02 18:06:42 UTC
Git commit d388e3ff1cbe2d940974eab075d11015757349c8 by Thomas Lübking.
Committed on 29/12/2012 at 16:27.
Pushed by luebking into branch 'master'.

snaphelper: repaint center rect on resizing client
FIXED-IN: 4.10
REVIEW: 108005

M  +14   -2    kwin/effects/snaphelper/snaphelper.cpp
M  +1    -0    kwin/effects/snaphelper/snaphelper.h

http://commits.kde.org/kde-workspace/d388e3ff1cbe2d940974eab075d11015757349c8