snaphelper: repaint center rect on resizing client

BUG: 311551
FIXED-IN: 4.10
REVIEW: 108005